# misinformation-llm-simulation

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  load_dataframes.ipynb  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: graph_config.json  graph_news.csv  newsdata_news.csv  science_news.csv
data/raw/: newsdata_news.csv
notebooks/: bert_fake_real_workbench.ipynb  fake_true_vad_workbench.ipynb  llm_simulation_workbench.ipynb  pretrained_fake_news_detector_workbench.ipynb  topic_drift_audit_workbench.ipynb
output/: execution_report.md  openrouter_nvidia_rewritten_df.csv
output/audit/LocalAudit/: all_datasets_consistency_audit.csv  audit_summary.csv  chatgpt_rewritten_df_consistency_audit.csv  gemini_rewritten_df_consistency_audit.csv  grok_rewritten_df_consistency_audit.csv  local_llama_rewritten_df_consistency_audit.csv  (+2 more)
output/interaction_graph/: simulation_steps.jsonl  simulation_summary.json
output/presentations/: misinformation_project_progress.pptx
output/rewritten/: chatgpt_rewritten_df.csv  gemini_rewritten_df.csv  grok_rewritten_df.csv  local_llama_rewritten_df.csv  openrouter_nvidia_rewritten_df.csv  science_rewritten_df.csv
results/: all_datasets_consistency_audit.csv  audit_summary.csv  local_llama_rewritten_df_consistency_audit.csv  openrouter_nvidia_rewritten_df_consistency_audit.csv
scripts/: create_project_presentation.mjs  fetch_newsdata.py  run_interaction_graph.py  run_notebooks.py
src/: bert_fake_real_workbench.ipynb  fetch_newsdata_to_csv.py  llm_simulation_workbench.ipynb  load_dataframes.ipynb  pretrained_fake_news_detector_workbench.ipynb  run_notebooks_sequentially.py  topic_drift_audit_workbench.ipynb
src/consts/: __init__.py  datasets.py  llm_requests.py
src/enums/: __init__.py  models.py  personalities.py  providers.py
src/misinformation_simulation/: __init__.py
src/utils/: __init__.py  bert_audit_functions.py  run_report.py  simulation_functions.py  topic_drift_functions.py
tests/: test_audits_lightweight.py  test_datasets_loading.py  test_datasets_selection.py  test_execution_report.py  test_fake_true_vad.py  test_interaction_graph.py  test_interaction_graph_io.py  test_interaction_graph_preview.py  test_interaction_graph_state.py  test_interaction_graph_ui.py  test_llm_clients.py  test_llm_rate_limit.py  test_llm_retry.py  test_llm_rewrite.py  test_newsdata.py  test_simulation_graph_run.py  test_text_metrics_vad.py  test_topic_drift_extraction.py  test_topic_drift_metrics.py
(+57 files in other folders)
