[project]
name = "misinformation-llm-simulation"
version = "0.1.0"
description = "TCC project for misinformation simulation with LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "datasets",
    "google-genai",
    "ipykernel",
    "jupyterlab",
    "openai",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "torch",
    "transformers",
]

[tool.uv]
package = false
