[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "misinformation-llm-simulation"
version = "0.1.0"
description = "TCC project for misinformation simulation with LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "datasets",
    "google-genai",
    "ipykernel",
    "jupyterlab",
    "openai",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "streamlit==1.56.0",
    "torch",
    "transformers==4.52.4",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest", "coverage", "pre-commit", "nbstripout", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["misinformation_simulation"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["output", "data", ".venv", ".venv-linux"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
